--- a/index.html
+++ b/index.html
@@ -8,7 +8,5 @@
     <script src="script.js"></script>
   </head>
 
-  <body>
-    <h1>Rock Paper Scissors game</h1>
-  </body>
+  <body></body>
 </html>
